[package]
name = "rmarkdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "rmarkdown"
path = "src/lib.rs"


[[bin]]
name = "rmarkdwon-cli"
path = "src/cli.rs"


[dependencies]
thiserror = {workspace=true}
path-absolutize = {workspace=true}
markdown-it = { workspace = true }
markdown-it-footnote = "0.2.0"
