[package]
name = "xdict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "win-ocr"
path = "src/win-ocr.rs"
doc = false

[dependencies]
xcap = "0.0.4"
futures = "0.3.5"

[dependencies.windows]
version = "0.54.0"
features = [
    "Foundation",
    "Media_Ocr", 
    "Graphics_Imaging", 
    "Storage_Streams", 
]

